--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Project3_Sort_Algos</name>
+	<name>CS146-Project-4</name>
 	<comment></comment>
 	<projects>
 	</projects>
